# tinysv

./: .dockerignore  .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  config.c  config.h  config.xml  docker-compose.yml  hashmap.c  hashmap.h  logger.h  main.c  main.h  module.c  module.h  tiny_sv.c
config/: default.xml
docker/: Dockerfile  dev.Dockerfile
include/: config.h  hashmap.h  hashmap_int.h  http_vars.h  logger.h  main.h  module.h  types.h  version.h.in
modules/: CMakeLists.txt  Makefile  default_module.c
sample/template/: 404.html
sample/www/: index.html
src/: CMakeLists.txt  Makefile  config.c  hashmap.c  hashmap_int.c  logger.c  main.c  module.c
template/www/: index.html
test/: Makefile  hashmap_int_test.c  hashmap_test.c
www/: index.html
